# backend/internal/api/api.go
@@ -65,6 +65,7 @@ func addRoutes(router *chi.Mux) {
 
 		r.With(middleware.AuthorizeRequest(role.RoleUser)).Post("/recipes", recipes.CreateRecipe)
 		r.With(middleware.AuthorizeRequest(role.RoleUser)).Post("/recipes/ingredients", recipes.CreateRecipeIngredient)
+		r.With(middleware.AuthorizeRequest(role.RoleUser)).Post("/recipes/steps", recipes.CreateRecipeStep)
 	})
 }
 
